[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oci-bastion-keepalive"
description = "Keep an OCI bastion SSH tunnel to a private OKE API server alive across the session hard-TTL by rotating sessions under a fixed local port"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Tyler D. North", email = "me@tyler-north.com" },
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "oci==2.182.0",
    "kubernetes==36.0.2",
    # The kubeconfig authenticates via an exec plugin that runs the `oci` CLI
    # (`oci ce cluster generate-token`); bundle it so port-forwards work out of
    # the box. Pinned to the build that resolves against oci==2.181.0.
    "oci-cli==3.89.2",
]

[project.urls]
Homepage = "https://gitlab.com/tnoff-projects/oci-bastion-keepalive"

[project.scripts]
oci-bastion-keepalive = "rotate_session:main"

[tool.setuptools]
py-modules = ["rotate_session"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }
